--- a/static/style.css
+++ b/static/style.css
@@ -294,6 +294,8 @@ main {
 
 .dash-bg {
   background: #f1f1f1;
+  background-image: url("../imgs/dash-bg.svg");
+  background-repeat: no-repeat;
   height: 100vh;
 }
 
@@ -303,6 +305,17 @@ main {
   height: 90vh;
   grid-gap: 10px;
   margin: 1rem 0;
+}
+
+.cat-panel {
+  background: #fff;
+  margin: 0 3rem;
+  border-radius: 8px;
+  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
+}
+
+.cat-panel h1 {
+  padding: 1rem;
 }
 
 .grid-container div{
@@ -695,6 +708,7 @@ button {
   align-items: center;
   background: #fff;
   border-radius: 8px;
+  box-shadow: 0 3px 2px -2px rgba(0,0,0,.35);
 }
 
 .cat-grid div button {
@@ -869,6 +883,13 @@ tr:hover {background-color:#f5f5f5;}
   /* ---------------------------------+
     Mobile Responsive Section         |
   -----------------------------------*/
+  @media screen and (max-width: 1290px) {
+    .todo-panel {
+      width: 80%;
+    }
+    .cat-list {width: 392.5px;}
+    textarea {width: 995px;}
+  }
   @media screen and (min-height: 930px) {
     textarea {
       height: 420px;
