--- a/static/style.css
+++ b/static/style.css
@@ -279,7 +279,15 @@ textarea {
 /*-------------------------------------------------------*
 * DASHBOARD SECTION                                      |
 *-------------------------------------------------------*/
-
+.intro-header {
+  font-size: 43px;
+}
+.intro-desc {
+  font-size: 22px;
+}
+.home-intro {
+  padding: 2rem 0;
+}
 .dash-item {
   color: #000;
   text-decoration: none;
@@ -288,8 +296,18 @@ textarea {
 
 main {
   padding: 0 2rem;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
+}
+
+.dash-footer {
+  display: flex;
+  justify-content: space-evenly;
+  padding: .5rem;
+  border-radius: 8px;
+  margin: 10px auto;
+  background: #fff;
+  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
 }
 
 .dash-bg {
@@ -304,7 +322,7 @@ main {
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
-  height: 90vh;
+  /*height: 90vh; */
   grid-gap: 10px;
   margin: 1rem 0;
 }
@@ -544,6 +562,8 @@ ul {
       text-align: left;
     }
   }
+
+
 /*********************************************************/
 /* To Do App Section */
 .todo-flex {
@@ -559,8 +579,8 @@ ul {
 
 .scroll-item {
   border-bottom: 2px solid #f1f1f1;
-  margin: 1rem;
-  width: 500px;
+  padding: 1rem;
+  width: 700px;
 }
 .scroll-item:hover {
   background: #f1f1f1;
@@ -794,8 +814,30 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   /* ---------------------------------+
-    Stats Section                     |
+    Analytics Section                 |
   -----------------------------------*/
+/*********************************************************/
+  /* attempt at responsive gantt chart
+  @media screen and (max-width: 1900px) {
+    #chart_div {
+      width: 1300px;
+    }
+  }
+  @media screen and (max-width: 1300px) {
+    #chart_div {
+      width: 100%; 
+      text-align: center;
+    }
+  }
+  */
+  .main-page {
+    margin: 0 1rem;
+  }
+  /*
+  .a-panel {
+    border: solid #333 1px;
+  }
+  */
   .avgs {
     display: flex;
     justify-content: space-between;
@@ -818,7 +860,8 @@ tr:hover {background-color:#f5f5f5;}
   .pie-box {
     display: flex;
     justify-content: space-around;
-    padding: 2rem;
+    padding: 0 2rem;
+    padding-top: 2rem;
     padding-right: 0;
   }
 
