--- a/static/style.css
+++ b/static/style.css
@@ -329,8 +329,13 @@ main {
 
 .cat-panel {
   background: #fff;
-  margin: 0 3rem;
+  
+  margin: 1rem 3rem;
+  padding: 0 1rem;
   border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
 }
 
@@ -616,6 +621,7 @@ ul {
 
 input[type="date"] {
     font-size: 14pt;
+    text-align: center;
 }
 
 input[type="time"] {
@@ -673,6 +679,12 @@ select {
 }
 
 /* Task and Journal for detail views *********************************/
+.row-c2 {
+  /* use for MR.F */
+  display: flex;
+  justify-content: space-between;
+}
+
 .editor {
   width: 80%;
   margin: 0 auto;
@@ -859,7 +871,7 @@ tr:hover {background-color:#f5f5f5;}
 
   .pie-box {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0 2rem;
     padding-top: 2rem;
     padding-right: 0;
@@ -951,15 +963,26 @@ tr:hover {background-color:#f5f5f5;}
     Mobile Responsive Section         |
   -----------------------------------*/
   @media screen and (max-width: 1290px) {
+    /* Smaller laptops */
     .todo-panel {
       width: 80%;
+    }
+    .scroll-item {
+      width: 550px;
     }
     .cat-list {width: 392.5px;}
     textarea {width: 995px;}
   }
+
   @media screen and (min-height: 930px) {
     textarea {
       height: 420px;
+    }
+  }
+  
+  @media screen and (min-height: 600px) {
+    .home-intro {
+      padding: 1rem 0;
     }
   }
   @media screen and (max-width: 830px) {
@@ -975,6 +998,7 @@ tr:hover {background-color:#f5f5f5;}
     .todo-txt-area {
       width: 95%!important;
     }
+    
   }
   @media screen and (max-height: 700px) {
     textarea.edit-field {
