--- a/static/style.css
+++ b/static/style.css
@@ -93,7 +93,8 @@ textarea {
   background: #f1f1f1;
   border: none;
   /*width: 565px;*/
-  width: 1257px;
+  /*width: 1257px;*/
+  width: 98%;
   height: 192px;
 }
 
@@ -103,7 +104,8 @@ textarea {
 }
 
 #form-control {
-  width: 565px;
+  /*width: 565px;*/
+  width: 50%;
   background: #f1f1f1;
   border: none;
 }
@@ -141,7 +143,8 @@ textarea {
 
 .cat-list {
   margin-left: 1rem;
-  width: 655px;
+  /*width: 655px;*/
+  width: 45%;
 }
 
 .sec-2 {
@@ -660,14 +663,14 @@ select {
 
 #logs-title {
   margin-block-start: 0!important;
+  margin-left: 1rem;
 }
 
 .log-header {
   display: flex;
   justify-content: space-between;
   padding-top: 1rem;
-  padding-left: 2rem;
-  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 #options {
@@ -853,8 +856,7 @@ tr:hover {background-color:#f5f5f5;}
   .avgs {
     display: flex;
     justify-content: space-between;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1rem;
   }
 
   .date-btn {
@@ -871,12 +873,19 @@ tr:hover {background-color:#f5f5f5;}
 
   .pie-box {
     display: flex;
-    justify-content: space-between;
-    padding: 0 2rem;
-    padding-top: 2rem;
+    justify-content: flex-end;
+    margin-top: 3rem;
     padding-right: 0;
+    /*box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);*/
   }
 
+  /*
+  .pie-data {
+    
+    width: 700px;
+    box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
+  }
+  */
   .pie-data {
     width: 700px;
   }
@@ -1128,7 +1137,10 @@ tr:hover {background-color:#f5f5f5;}
       width: 340px;
       margin: 0;
     }
-
+    /* analytics page */
+    .pie-box {
+      display: block;
+    }
   }
 
   /* Make Tables Responsive */
