--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ nav {
 
 .fa-wifi {
   /*font-size: 72px;*/
-  background: -webkit-linear-gradient(blue, red);
+  background: -webkit-linear-gradient(rgb(0, 210, 251), rgb(0, 218, 25));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -290,6 +290,12 @@ textarea {
 }
 .home-intro {
   padding: 2rem 0;
+  background: #fff;
+  border-radius: 8px;
+  margin: 10px auto;
+  background: #fff;
+  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
+  text-align: center;
 }
 .dash-item {
   color: #000;
@@ -315,10 +321,13 @@ main {
 
 .dash-bg {
   background: #f1f1f1;
+  background-image: url(../imgs/dash-bg.svg);
   /*
-  background-image: url("../imgs/dash-bg.svg");
-  background-repeat: no-repeat;
+  linear-gradient(
+    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+    url(../imgs/dash-bg.svg);
   */
+  background-repeat: no-repeat;
   height: 100vh;
 }
 
@@ -356,7 +365,16 @@ main {
   border-radius: 8px;
   background-repeat: no-repeat;
   box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
+  background: #fff;
+  /*
+  background-image:
+  linear-gradient(
+    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
+    url(../imgs/Rainbow_Blue.jpg);
+  background-size: cover;
+  */
 }
+/*
 .grid-container div:nth-child(1){
   background-image:
   linear-gradient(
@@ -405,6 +423,7 @@ main {
     url(../imgs/voting.jpg);    
   background-size: cover;
 }
+*/
 /*
 * For dark mode, change dash-item color to #fff
 .grid-container div:nth-child(1){
@@ -969,7 +988,7 @@ tr:hover {background-color:#f5f5f5;}
     text-align: center;
   }
   /* ---------------------------------+
-    Mobile Responsive Section         |
+    Responsive Section                |
   -----------------------------------*/
   @media screen and (max-width: 1370px) {
     /* In progress */
@@ -978,6 +997,9 @@ tr:hover {background-color:#f5f5f5;}
     }
     .cat-list {
       width: 48%;
+    }
+    .scroll-item {
+      width: 350px;
     }
   }
 
@@ -1023,12 +1045,15 @@ tr:hover {background-color:#f5f5f5;}
     }
     
   }
+  /*
   @media screen and (max-height: 700px) {
     textarea.edit-field {
-      width: 800px;
+      width: 450px;
     }
   }
-  
+  */
+
+  /* Mobile responsive section start*/
   /* removed only keyword before screen keyword 6/18 */
   @media screen and (max-width: 700px) {
     /*
@@ -1046,7 +1071,6 @@ tr:hover {background-color:#f5f5f5;}
 
     .editor {
       padding: 0 1rem;
-      width: 375px;
       text-align: left;
     }
 
@@ -1082,6 +1106,8 @@ tr:hover {background-color:#f5f5f5;}
       margin: 0 auto; 
     }
     
+    /* Notes Section & Task list */
+
     textarea { 
       width: 320px;
       font-size: 16pt;
