--- a/static/style.css
+++ b/static/style.css
@@ -83,8 +83,23 @@ ul.topnav-list {
 }
 
 /*-------------------------------------------------------*
-* UI User Input Components                               |
+* UI Input Components                                    |
 *-------------------------------------------------------*/
+.main-selector {
+  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
+  border: none;
+  padding: .5rem 1rem;
+  border-radius: 8px;
+}
+/* login form */
+.login-comp {
+  width: 60%;
+}
+
+.spc-pt {
+  padding-top: 2rem;
+}
+/* other user input components */
 
 textarea {
   font-family: 'PT Sans', sans-serif;
@@ -95,7 +110,7 @@ textarea {
   /*width: 565px;*/
   /*width: 1257px;*/
   width: 98%;
-  height: 192px;
+  height: 220px;
 }
 
 .form-container {
@@ -283,20 +298,9 @@ textarea {
 * DASHBOARD SECTION                                      |
 *-------------------------------------------------------*/
 .intro-header {
-  font-size: 43px;
+  font-size: 32px;
 }
-.intro-desc {
-  font-size: 22px;
-}
-.home-intro {
-  padding: 2rem 0;
-  background: #fff;
-  border-radius: 8px;
-  margin: 10px auto;
-  background: #fff;
-  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
-  text-align: center;
-}
+
 .dash-item {
   color: #000;
   text-decoration: none;
@@ -305,7 +309,7 @@ textarea {
 
 main {
   padding: 0 2rem;
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -328,12 +332,12 @@ main {
     url(../imgs/dash-bg.svg);
   */
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 60vh;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   /*height: 90vh; */
   grid-gap: 10px;
   margin: 1rem 0;
@@ -341,7 +345,6 @@ main {
 
 .cat-panel {
   background: #fff;
-  
   margin: 1rem 3rem;
   padding: 0 1rem;
   border-radius: 8px;
@@ -358,7 +361,7 @@ main {
 .grid-container div{
   padding: 1rem;
   text-align: center;
-  font-size: 40px;
+  font-size: 28px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -366,119 +369,33 @@ main {
   background-repeat: no-repeat;
   box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
   background: #fff;
-  /*
-  background-image:
-  linear-gradient(
-    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-    url(../imgs/Rainbow_Blue.jpg);
-  background-size: cover;
-  */
-}
-/*
-.grid-container div:nth-child(1){
-  background-image:
-  linear-gradient(
-    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-    url(../imgs/journal.jpg);
-  background-size: cover;
 }
 
-.grid-container div:nth-child(2){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-      url(../imgs/chatroom.jpg);
-  background-size: cover;
+.activity {
+  background: #fff;
+  box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
+  border-radius: 8px;
+  padding: 1rem;
+  margin-top: 10px;
 }
 
-.grid-container div:nth-child(3){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-      url(../imgs/data-store.jpg);
-  background-size: cover;
+.activity-item {
+  width:50%;
 }
-
-.grid-container div:nth-child(4){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55)),
-      url(../imgs/todo.jpg);
-  background-size: cover;
-}
-
-.grid-container div:nth-child(5){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.85)),
-      url(../imgs/analytics-blur.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.grid-container div:nth-child(6){
-  background-image:
-  linear-gradient(
-    to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.85)),
-    url(../imgs/voting.jpg);    
-  background-size: cover;
-}
-*/
-/*
-* For dark mode, change dash-item color to #fff
-.grid-container div:nth-child(1){
-  background-image:
-  linear-gradient(
-    to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
-    url(../imgs/data-store.jpg);
-}
-
-.grid-container div:nth-child(2){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
-      url(../imgs/chatroom.jpg);
-  background-size: cover;
-}
-
-.grid-container div:nth-child(3){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
-      url(../imgs/journal.jpg);
-  background-size: cover;
-}
-
-.grid-container div:nth-child(4){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
-      url(../imgs/voting.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.grid-container div:nth-child(5){
-  background-image:
-    linear-gradient(
-      to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
-      url(../imgs/todo.jpg);
-  background-size: cover;
-}
-.grid-container div:nth-child(6){
-  background-image:
-  linear-gradient(
-    to bottom, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.55)),
-    url(../imgs/analytics-blur.jpg);
-  background-size: cover;
-}
-*/
 .local-app-container {
-    text-align: center;
-    background: rgba(255, 255, 255, 1);
-    border-radius: .25rem;
-    padding: 1.5rem;
+  text-align: center;
+  background: rgba(255, 255, 255, 1);
+  border-radius: .25rem;
+  padding: 1.5rem;
 }
+
+/*-------------------------------------------------------*
+* BONUS APPS SECTION                                     |
+*-------------------------------------------------------*/
+.pain-rating {
+  text-align: center;
+}
+
 /*-------------------------------------------------------*
 * NAV SECTION WITH DROP DOWN MENU ITEMS                  |
 *-------------------------------------------------------*/
@@ -596,6 +513,7 @@ ul {
 .todo-flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .scroll-pane {
@@ -622,8 +540,10 @@ ul {
 }
 
 .todo-bg {
+  background: #f1f1f1;
   background-image: url('../imgs/dash-bg.svg');
-  height: 100vh;
+  height: 60vh;
+  background-repeat: no-repeat;
 }
 
 .todo-panel {
@@ -682,14 +602,15 @@ select {
 
 #logs-title {
   margin-block-start: 0!important;
-  margin-left: 1rem;
+  margin-left: 2rem;
 }
 
 .log-header {
   display: flex;
   justify-content: space-between;
   padding-top: 1rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 #options {
@@ -1024,11 +945,13 @@ tr:hover {background-color:#f5f5f5;}
     }
   }
   
+  /*
   @media screen and (min-height: 600px) {
     .home-intro {
       padding: 1rem 0;
     }
   }
+  */
 
   @media screen and (max-width: 830px) {
     .todo-flex {
