--- a/static/style.css
+++ b/static/style.css
@@ -567,9 +567,15 @@ ul {
   background-repeat: no-repeat;
 }
 
+/* attempting to disable horizontal scrolling on dashboard
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+}
+*/
+element {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .todo-panel {
