--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,12 @@
   margin:100px;
 }
 
-body {
+html, body {
     margin:0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
 }
   
 a {
