--- a/static/style.css
+++ b/static/style.css
@@ -587,8 +587,10 @@ ul {
   background-image: linear-gradient(90deg, rgba(174,238,219,1) 0%, rgba(43,211,235,1) 100%);
   height: 50vh;
   background-repeat: no-repeat;
+  /*
   max-width: 100%;
   overflow-x: hidden;
+  */
 }
 
 /* attempting to disable horizontal scrolling on dashboard
