--- a/static/style.css
+++ b/static/style.css
@@ -1213,9 +1213,11 @@ tr:hover {background-color:#f5f5f5;}
       height: auto;
     }
 
+    /*
     .detail-topper {
       padding: 0 1rem;
     }
+    */
 
     /* add category modal */
     .modal-content {
