--- a/static/style.css
+++ b/static/style.css
@@ -320,7 +320,7 @@ textarea {
 
 main {
   padding: 0 2rem;
-  width: 80%;
+  width: auto;
   margin: 0 auto;
 }
 
@@ -672,7 +672,11 @@ element {
 
 .settings-flex {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+}
+
+.add-worker {
+  flex: 50% 0;
 }
 
 .text-center {
@@ -1071,6 +1075,12 @@ tr:hover {background-color:#f5f5f5;}
 /* ---------------------------------+
   Responsive Section                |
 -----------------------------------*/
+/* 1920 monitors */
+@media screen and (min-width: 1900px) {
+  main {
+    width: 80%;
+  }
+}
 
 /* samsung monitor size */
 @media screen and (max-width: 1370px) {
@@ -1150,6 +1160,10 @@ tr:hover {background-color:#f5f5f5;}
   /* Make Tables Responsive */
   @media only screen and (max-width: 760px),
   (min-device-width: 768px) and (max-device-width: 1024px)  {
+    /* dashboard adjustments */
+    main {
+      width: auto;
+    }
     .tbl-head {
       display: none;
     }
@@ -1366,3 +1380,4 @@ tr:hover {background-color:#f5f5f5;}
       display: block;
     }
   }
+
